RESOLVED FIXED211580
REGRESSION (r261257): Lifetime problem with upconverted characters in toLocaleCase
https://bugs.webkit.org/show_bug.cgi?id=211580
Summary REGRESSION (r261257): Lifetime problem with upconverted characters in toLocal...
Darin Adler
Reported 2020-05-07 10:17:58 PDT
REGRESSION (r261257): Lifetime problem with upconverted characters in toLocaleCase
Attachments
Patch (3.39 KB, patch)
2020-05-07 10:30 PDT, Darin Adler
no flags
Darin Adler
Comment 1 2020-05-07 10:30:50 PDT
Darin Adler
Comment 2 2020-05-07 10:32:29 PDT
Yusuke Suzuki
Comment 3 2020-05-07 10:40:47 PDT
Comment on attachment 398757 [details] Patch r=me
EWS
Comment 4 2020-05-07 11:02:16 PDT
Committed r261315: <https://trac.webkit.org/changeset/261315> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398757 [details].
Note You need to log in before you can comment on or make changes to this bug.